Updated About scene, added Licenses, added FUNDING.yml